# pgwait

./: README.md  pyproject.toml  setup.py  wait_for_postgres.py
src/: pgwait.py
